# nix-shell-hooks

./: .envrc  .gitignore  Cargo.lock.license  Cargo.toml  README.md  auto-patchelf-venv-shell-hook.sh  flake.nix  maturin-import-shell-hook.sh  overlay.nix  patch-venv-shell-hook.sh  uv-venv-shell-hook.sh
auto-patchelf/: Cargo.toml
auto-patchelf/src/: cache.rs  cli.rs  concurrency.rs  elf.rs  main.rs  misc.rs  state.rs
auto-patchelf/tests/assets/: pam_systemd_home.so.license
dev/: flake.nix
