# SPDX-FileCopyrightText: 2025 László Vaskó <vlaci@fastmail.com>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "auto-patchelf"
description = "auto-patchelf tries as hard as possible to patch the provided binary files by looking for compatible libraries in the provided paths."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bincode = "1.3.3"
eyre = "0.6.12"
glob = "0.3.2"
goblin = { version = "0.9.3", features = ["elf32", "elf64", "endian_fd", "std"], default-features = false }
lexopt = "0.3.0"
miniserde = "0.1.42"
